2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Fix segfault on Tools->Reload Configuration when no documents are
   open (#3037079).
 * scintilla/LexMarkdown.cxx:
   Fix infinite loop in Markdown lexer (patch by Colomban Wendling,
   thanks).
 * src/build.c:
   Fix saving non-project filetype error regex.
 * src/build.c:
   Fix memory leak in read_regex().


2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Check for libsocket on OpenSolaris to fix build.
 * src/encodings.c:
   Rewrite the logic to auto detect encodings a bit to make it more
   readable and fix a slightly wrong detection on Windows
   (closes #3019573).
 * plugins/geanyfunctions.h, src/editor.c, src/plugindata.h,
   src/plugins.c:
   Add editor_goto_pos() to the plugin API.


2010-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * configure.ac:
   Check for git-svn repo, not just git because find-rev doesn't
   always fail with a git-only repo.


2010-08-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/search.c:
   Fix a memory leak based on input by Daniel Marjamäki. Thanks.


2010-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Reorder Focus keybindings.


2010-08-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * autogen.sh:
   Applying a patch by Erik de Castro Lopo for checking against
   pkg-config when running autogen.sh. Thanks for the patch.
 * src/log.c:
   Applying a patch by Colomban Wendling to print out log domains.
   Thanks.


2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, src/prefs.c, src/plugindata.h:
   Use single binding_ids keybinding array instead of individual
   arrays for core keybindings. This allows the keybinding IDs to be
   merged into one enum; the order of keybindings is now just the